@@ -1,3 +1,10 @@
+2018-07-02  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Repository fix after r233427 and r233443.
+        Added back the test which got erroneously deleted in r233443.
+
+        * stress/instanceof-non-object-prototype.js:
+
 2018-07-02  Keith Miller  <keith_miller@apple.com>
 
         InstanceOf IC should do generic if the prototype is not an object.
